--- a/affinitic/skin/static/style.css
+++ b/affinitic/skin/static/style.css
@@ -79,12 +79,12 @@ margin-bottom:5px;
 }
 
 #logo{
-width:165px;
-height:165px;
-background-image:url(images/affinitic_logo_rond.png);
+width:150px;
+height:150px;
+background-image:url(images/affinitic_logo.png);
 background-repeat:no-repeat;
 margin-left:10px;
-margin-top:0px;
+margin-top:8px;
 float:left;
 }
 
@@ -115,12 +115,14 @@ margin-left:5px;
 padding:0px 12px;
 }
 
-#content-image{
+#content-right-image{
 width:390px;
 margin-top:-172px;
 float:right;
 min-height:685px;
 margin-right:-19px;
+background-image:url("images/right_image.png");
+background-repeat:no-repeat;
 }
 
 #footer{
