--- a/affinitic/skin/static/style.css
+++ b/affinitic/skin/static/style.css
@@ -135,7 +135,6 @@ width:370px;
 margin-top:-172px;
 float:right;
 min-height:685px;
-background-image:url("images/right_image.png");
 background-repeat:no-repeat;
 border-radius:0px 30px 30px 0px;
 }
@@ -262,6 +261,33 @@ font-size:0.6em;
 color:#999;
 text-align:right;
 }
+
+
+/*** ZAF BOYZ ***/
+article.zaf-boyz-listing{
+border:1px solid #ccc;
+border-radius: 8px;
+box-shadow:5px 5px 10px rgba(50,50,50,0.5);
+padding:8px;
+margin-bottom:10px;
+}
+
+section.zaf-boyz-short-description{
+float:left;
+width:300px;
+}
+
+section.zaf-boyz-vignette{
+float:right;
+width:60px;
+margin-right:90px;
+}
+
+article.zaf-boyz-description h3{
+color:#7E725B;
+}
+
+
 
 
 /***  SUPERSIZED ***/
