--- a/affinitic/skin/static/style.css
+++ b/affinitic/skin/static/style.css
@@ -268,6 +268,21 @@ background-position:left top;
 background-position:left -26px;
 }
 
+#blog-affinitic a{
+float:left;
+display:inline-block;
+width:30px;
+height:24px;
+background-image:url(images/icon_blog.png);
+background-repeat:no-repeat;
+background-position:left top;
+}
+
+#blog-affinitic a:hover{
+background-position:left -26px;
+}
+
+
 
 #coordonnee{
 float:right;
