--- a/affinitic/skin/static/style.css
+++ b/affinitic/skin/static/style.css
@@ -91,8 +91,16 @@ nav#menu-sup li a:hover{
 color:#929292;
 }
 
+/*** BREADCRUMBS ***/
+#breadcrumbs-you-are-here{
+display:none;
+}
 
 /*** CONTENU PRINCIPAL ***/
+#content{
+margin: 0px;
+}
+
 #content-main{
 border-radius:0px 30px 0px 30px;
 background-color:rgba(255,255,255,1);
@@ -171,7 +179,7 @@ line-height: 1.5em;
 font:30px "NobileRegular";
 margin-top: 0;
 color:#7e725b;
-letter-spacing: 0.08em;
+letter-spacing: 0em;
 }
 
 #content h2{
