Improve team page spacing

--- a/affinitic/skin/static/style.css
+++ b/affinitic/skin/static/style.css
@@ -327,6 +327,7 @@ margin-right:90px;
 article#zaf-boyz-description h1,
 article#zaf-boyz-description h3{
 color:#7E725B;
+margin-top:8px;
 }
 
 
@@ -353,6 +354,7 @@ article#client-description{}
 article#client-description h1,
 article#client-description h3{
 color:#7E725B;
+margin-top:8px;
 }
 
 section#client-image-site-description{
